Game state modals, level 2

--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
                         <p><span>ESC</span> Pause</p>
                     </div>
 
+                    <div id="start-splash"
+                         class="modal">
+                        <div class="modal-content">
+                            <h1 class="logo large">FRUSTRIS</h1>
+                            <p>Tetris, but with physics.</p>
+                            <p class="level-tag">LEVEL 01</p>
+                            <button id="play-btn">PLAY</button>
+                        </div>
+                    </div>
+
+                    <div id="level-two-splash"
+                         class="modal hidden no-bg">
+                        <h1 class="level-two-text">LEVEL 02</h1>
+                    </div>
+
                     <div id="pause-modal"
                          class="modal hidden">
                         <div class="modal-content">
@@ -70,13 +85,14 @@
                     <div id="game-over"
                          class="modal game-over-modal hidden">
                         <div class="modal-content">
+                            <h1 class="logo small">FRUSTRIS</h1>
                             <h2>GAME OVER</h2>
                             <p>The pile reached the top.</p>
                             <div class="final-score">
                                 <span class="label">FINAL SCORE</span>
                                 <span id="final-score-val" class="value">0</span>
                             </div>
-                            <button id="restart-btn">TRY AGAIN</button>
+                            <button id="restart-btn">RETRY</button>
                         </div>
                     </div>
                 </div>
