Highscore, Perfect clear 1000, Level 3

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                             <button id="mobile-pause" class="mobile-only-icon">||</button>
                             <div class="stats">
                                 <div class="stat-box">
+                                    <span class="label">HIGH SCORE</span>
+                                    <span id="high-score-val" class="value">000000</span>
+                                </div>
+                                <div class="stat-box">
                                     <span class="label">SCORE</span>
                                     <span id="score-val" class="value">000000</span>
                                 </div>
@@ -77,7 +81,16 @@
                         <div class="modal-content">
                             <h2 class="level-two-text">LEVEL 02</h2>
                             <p>Challenge accepted? Matches now require 4 pieces.</p>
-                            <button id="continue-btn">CONTINUE</button>
+                            <button id="continue-btn-2">CONTINUE</button>
+                        </div>
+                    </div>
+
+                    <div id="level-three-splash"
+                         class="modal hidden">
+                        <div class="modal-content">
+                            <h2 class="level-three-text">LEVEL 03</h2>
+                            <p>Ultimate frustration! Matches now require 5 pieces.</p>
+                            <button id="continue-btn-3">CONTINUE</button>
                         </div>
                     </div>
 
