--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
               crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap"
               rel="stylesheet">
+        <link rel="icon"
+              type="image/svg+xml"
+              href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAzMiAzMic+PHJlY3Qgd2lkdGg9JzMyJyBoZWlnaHQ9JzMyJyBmaWxsPSdibGFjaycvPjxnIHRyYW5zZm9ybT0ncm90YXRlKDE1IDE2IDE2KSc+PHBhdGggZD0nTTEwIDZoNHYxMmg4djRoLTEyeicgZmlsbD0nI0ZGRDYwMCcvPjwvZz48L3N2Zz4=">
         <link rel="stylesheet"
               href="./style.css">
     </head>
