Mouse control, artwork
config for relative path, no context menu, highscore bug

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                             <p>Tetris, but with physics.</p>
                             <div class="instructions-list">
                                 <div class="desktop-only">
-                                    <p><span>&larr;&rarr;</span> Move</p>
-                                    <p><span>A/D</span> Smooth Rotate</p>
-                                    <p><span>SPACE</span> Hard Drop</p>
+                                    <p><span>DRAG</span> Move / Rotate</p>
+                                    <p><span>CLICK</span> Hard Drop</p>
+                                    <p><span>KEYS</span> &larr;&rarr; / A / D / Space</p>
                                     <p><span>ESC</span> Pause</p>
                                 </div>
                                 <div class="mobile-only-block">
@@ -103,9 +103,9 @@
                             <h2>PAUSED</h2>
                             <div class="instructions-list">
                                 <div class="desktop-only">
-                                    <p><span>&larr;&rarr;</span> Move</p>
-                                    <p><span>A/D</span> Smooth Rotate</p>
-                                    <p><span>SPACE</span> Hard Drop</p>
+                                    <p><span>DRAG</span> Move / Rotate</p>
+                                    <p><span>CLICK</span> Hard Drop</p>
+                                    <p><span>KEYS</span> &larr;&rarr; / A / D / Space</p>
                                 </div>
                                 <div class="mobile-only-block">
                                     <p><span>SWIPE</span> Move / Rotate</p>
