--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
                 <div class="ui-overlay">
                     <header>
-                        <h1 class="logo">FRUSTRIS</h1>
+                        <div class="logo-group">
+                            <h1 class="logo">FRUSTRIS</h1>
+                            <div id="next-preview"
+                                 class="next-preview"></div>
+                        </div>
                         <div class="header-right">
                             <button id="mobile-pause" class="mobile-only-icon">||</button>
                             <div class="stats">
